--- a/style.css
+++ b/style.css
@@ -1,1 +1,57 @@
-
+body{
+    height:445px;
+    width: 390px;
+    padding: 20px;
+    border: 1px white solid;
+    border: double;
+    border-radius: 20px;
+    background-color: black;
+    color: white;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-align: center;
+}
+img{
+    padding: 10x;
+    margin-right: 20px;
+    border: solid white 1px;
+    border-radius: 20px;
+}
+.base{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    line-height: 16px;
+    text-transform: uppercase;
+    text-align: justifys;
+    float: right;
+    background-color: rgb(100, 100, 100);
+    padding: 20px; 
+    border: white solid 1px;
+    border-radius: 20px ; 
+}
+.info{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(36, 31, 31);
+    border: white solid 1px;
+    border-radius: 20px ;
+    padding: 20px;
+    margin-top: 20px;
+    float: left;
+}
+.lien{
+    float: right;
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(34, 22, 22);
+    border: white solid 1px;
+    border-radius: 20px ;
+    line-height: 26px;
+    padding: 20px;
+    margin-top: 20px;  
+    padding-right: 35px;
+    padding-left: 35px;  
+}
+a{
+    color: white;
+}
